# AssaultCube-reverse

./: CMakeLists.txt  README.md
AssaultCube-reverse/: dllmain.cpp  offsets.h
AssaultCube-reverse/Hook/: GunReloadFunc.cpp  GunReloadFunc.h  GunShootFunc.cpp  GunShootFunc.h  HealFunc.cpp  HealFunc.h  SubgunShootFunc.cpp  SubgunShootFunc.h  hookWrapper.cpp  hookWrapper.h  hook_t.h
