cmake_minimum_required(VERSION 3.16)
project(ACR)

set(CMAKE_CXX_STANDARD 17)

FILE(GLOB_RECURSE MAIN_SOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/AssaultCube-reverse/*.cpp)
FILE(GLOB_RECURSE MAIN_HEADER CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/AssaultCube-reverse/*.h)

add_library(ACR SHARED ${MAIN_SOURCE} ${MAIN_HEADER})