cmake_minimum_required(VERSION 3.16)
project(ACR)

set(CMAKE_CXX_STANDARD 17)

FILE(GLOB_RECURSE MAIN_SOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/AssaultCube-reverse/*.cpp)
FILE(GLOB_RECURSE MAIN_HEADER CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/AssaultCube-reverse/*.h)

include_directories(${CMAKE_CURRENT_LIST_DIR}/minhook/include)

FILE(GLOB_RECURSE MINHOOK_SOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/*.c)
FILE(GLOB_RECURSE MINHOOK_HEADER CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/*.h)
FILE(GLOB_RECURSE MINHOOK_HDE_SOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/hde/*.c)
FILE(GLOB_RECURSE MINHOOK_HDE_HEADER CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/hde/*.h)

add_library(ACR SHARED ${MAIN_SOURCE} ${MAIN_HEADER} ${MINHOOK_SOURCE} ${MINHOOK_HEADER} ${MINHOOK_HDE_SOURCE} ${MINHOOK_HDE_HEADER})